WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212976
REGRESSION (
r260820
): [macCatalyst] Web process crashes when uploading a file
https://bugs.webkit.org/show_bug.cgi?id=212976
Summary
REGRESSION (r260820): [macCatalyst] Web process crashes when uploading a file
Wenson Hsieh
Reported
2020-06-09 10:32:39 PDT
<
rdar://problem/64033186
>
Attachments
Patch
(5.97 KB, patch)
2020-06-09 11:18 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-06-09 11:18:47 PDT
Created
attachment 401455
[details]
Patch
EWS
Comment 2
2020-06-09 12:08:26 PDT
Committed
r262802
: <
https://trac.webkit.org/changeset/262802
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 401455
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug