REGRESSION (r260820): [macCatalyst] Web process crashes when uploading a file https://bugs.webkit.org/show_bug.cgi?id=212976 <rdar://problem/64033186>

Reviewed by Tim Horton.

Source/WebKit:

On Mac Catalyst, we attempt to take a sandbox extension for `com.apple.frontboard.systemappservices` when
uploading a file; this service does not exist in Catalyst, and we consequently encounter a release assertion
under `WebPage::didChooseFilesForOpenPanelWithDisplayStringAndIcon`.

Fix this by introducing `HAVE(FRONTBOARD_SYSTEM_APP_SERVICES)`, and using it to guard codepaths that attempt to
grab a mach extension to this service. (As a followup, we should consider adopting this in other places that
currently reference `com.apple.frontboard.systemappservices`).

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didChooseFilesForOpenPanelWithDisplayStringAndIcon):
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::didChooseFilesForOpenPanelWithDisplayStringAndIcon):

Source/WTF:

Add `HAVE(FRONTBOARD_SYSTEM_APP_SERVICES)`.

* wtf/PlatformHave.h:


Canonical link: https://commits.webkit.org/225779@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262802 268f45cc-cd09-0410-ab3c-d52691b4dbfc